--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,7 +1,7 @@
-@Article{Peters_Automated_2022,
-  author    = {Ravi Peters and Bal{\'a}zs Dukai and Stelios Vitalis and {van Liempt}, Jordi and Jantien Stoter},
+@article{Peters_Automated_2022,
+  author    = {Peters, Ravi and Dukai, Bal{\'a}zs and Vitalis, Stelios and {van Liempt}, Jordi and Stoter, Jantien},
   journal   = {Photogrammetric Engineering and Remote Sensing},
-  title     = {Automated 3D Reconstruction of LoD2 and LoD1 Models for All 10 Million Buildings of the Netherlands},
+  title     = {{Automated 3D Reconstruction of LoD2 and LoD1 Models for All 10 Million Buildings of the Netherlands}},
   year      = {2022},
   issn      = {0099-1112},
   number    = {3},
